--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "api-turismo2",
+  "name": "api-turismo",
   "version": "0.0.1",
   "description": "uma aplicacao node",
   "main": "app.js",
